# Zooniverse-DB

./: .gitignore  404.html  README.md  backend.yml  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
search/: search_index.json
tests/: conftest.py  pytest.ini  test_import.py  test_server.py  test_test.py
zoondb/analysis/example/: alpha.py
zoondb/backend/: rest.py  schema.py  send_to_zooniverse.py
zoondb/pipelines/: pipeline.py
zoondb/routines/: composite.py  compound.py  simple.py
