[tool.poetry]
name = "zoondb"
version = "2021.06-alpha.0"
description = "CHIME/FRB Backend - zoondb"
authors = ["Gordon Hamilton <gordon.hamilton1110@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.0"
maestro = {git = "ssh://git@github.com/CHIMEFRB/maestro.git", branch="main"}
chime-frb-api = "^2021.5.28"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
mkdocs-material = "^5.5.3"
pre-commit = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
